# lule

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  gunicorn.conf.py  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 224b0244f31e_first_migration.py  2c1515cb6c65_first_migration.py  55d038f77cf6_first_migration.py  88cfdf1eab27_initial_migration.py  bc381b72fa45_first_migration.py  c136dc806b79_first_migration.py
lule/: constants.py  settings.py
lule/api/: app.py  env.py  security.py
lule/api/routes/: institutions.py  programs.py  subjects.py  users.py
lule/api/schemas/: institutions.py  programs.py  subjects.py  user.py
lule/database/controller/: fields.py  institutions.py  programs.py  subjects.py  users.py
lule/database/models/: __init__.py  base.py  college.py  college_field.py  field.py  institution.py  institution_field.py  material.py  program.py  student.py  subject.py  user.py
tests/: test_lule.py
