[tool.poetry]
name = "lule"
version = "0.1.0"
description = ""
authors = ["Luka Dijan <ldijan00@fesb.hr>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0"
uvicorn = "^0.14.0"
gino = {extras = ["pg", "starlette"], version = "^1.0.1"}
alembic = "^1.6.5"
psycopg2 = "^2.9.1"
envparse = "^0.2.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
