[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]

[tool.black]
line_length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true

[tool.poetry]
name = "lule"
version = "0.1.0"
description = ""
authors = ["Luka Dijan <ldijan00@fesb.hr>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0"
uvicorn = "^0.14.0"
gino = {extras = ["pg", "starlette"], version = "^1.0.1"}
envparse = "^0.2.0"
gunicorn = "^20.1.0"
flake8 = "^3.9.2"
mypy = "^0.910"
pre-commit = "^2.14.0"
pydantic = {extras = ["email"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]
alembic = "^1.6.5"
pytest = "^5.2"
requests = "^2.26.0"
black = {version = "^21.9b0", allow-prereleases = true}
isort = "^5.9.3"
